--- a/css/default.css
+++ b/css/default.css
@@ -341,7 +341,7 @@ div.divider {
 	margin-bottom: 20px;
 }
 
-article.full-width .title {
+article.full-width > title {
 	border-bottom: 1px solid #EFEFEF;
 	border-top: 1px solid #EFEFEF;
 }
@@ -538,7 +538,7 @@ input.green-button:hover, a.green-button:hover {
 }
 
 
-#wrapper  aside article h6, section.support h6, #wrapper #slider h6 {
+#wrapper aside article h6, section.support h6, #wrapper #slider h6, .project-content h6 {
 	font-size: 18px;
 	line-height: 1.2em;
 	font-family: 'PTSansCaptionBold';
@@ -699,20 +699,18 @@ article.team {
 }
 
 div.well {
-	color: #626262;
+	color: #595959;
 	font-size: 14px;
-	width: 93% !important;
-	margin: -20px 0 0 0;
-	padding: 25px 25px 10px 25px !important;
+	width: 580px;
+	margin: 40px 10px 20px 10px;
 	float: left;
+	display: block;
 }
 
 
 div.well p {
 	float: left;
-	width: 80%;
 	height: auto;
-	text-align: right;
 }
 
 
@@ -815,7 +813,7 @@ form.paypal-form{
 	height: 40px;
 	margin-bottom: 0px !important;
 	padding: 0px !important;
-	float: right;
+	*float: right;
 	margin-right: 20px;
 	display: inline-block;
 	margin-top: -10px;
@@ -907,7 +905,8 @@ section.release .deck {
 	font-size: 20px;
 	margin-top: 12px;
 }
-section.release strong {
+
+strong {
 	font-family: 'PTSansCaptionBold';
 }
 section.release .body {
@@ -921,3 +920,82 @@ section.release blockquote {
 	padding: 20px 20px 20px 55px;
 	margin: 10px auto;
 }
+
+/* Support */
+.perks {
+	position: relative;
+	width: 300px;
+	margin-bottom: 25px;
+	float: right;
+}
+
+.perks li {
+	list-style: none !important;
+}
+
+.perk {
+	padding: 10px;
+	background: #d2d2d2;
+	margin-bottom: 20px;
+}
+
+.funding {
+	padding: 10px;
+	background: #f4f4f4;
+	margin-bottom: 20px;
+}
+
+.shadow {
+	-moz-box-shadow: 1px 1px 2px #888888;
+	-webkit-box-shadow: 1px 1px 2px #888888;
+	box-shadow: 1px 1px 2px #888888;
+}
+
+.rounded {
+	border-radius: 6px;
+	-webkit-border-radius: 6px;
+	-moz-border-radius: 6px;
+}
+
+.perk .title {
+	border-bottom: 1px solid #a8a8a8;
+	color: #222222;
+	padding-bottom: 5px;
+	font-size: 16px;
+	letter-spacing: 0.04em;
+	line-height: 18px;
+	word-wrap: break-word;
+}
+
+.perk .title .amount {
+	font-size: 28px;
+	padding-top: 10px;
+	padding-bottom: 10px;
+}
+
+.perk .description, .funding .description {
+	font-size: 14px;
+	color: #595959;
+	padding-top: 1em;
+	margin-top: 0;
+	border-top: 1px solid #f4f4f4;
+	line-height: 18px;
+	word-wrap: break-word;
+	white-space: pre-line;
+}
+
+.project-content {
+	width: 620px;
+	float: left;
+}
+
+.project-content .description {
+	padding: 20px;
+	max-width: 580px;
+	width: 580px;
+}
+
+.project-content p {
+	font-size: 16px;
+}
+
