--- a/css/default.css
+++ b/css/default.css
@@ -76,7 +76,7 @@ header h1 {
 	width: 267px;
 	height: 50px;
 	margin: 5px auto 0px auto;
-	background: url(../images/logo_small.png) no-repeat;
+	background: url(../images/logo-small.png) no-repeat;
 	text-indent: -9999px;
 	float: left;
 
