--- a/css/default2.css
+++ b/css/default2.css
@@ -135,6 +135,8 @@ input[type="text"], input[type="password"], input[type="date"], input[type="date
   margin: 0 0 1rem 0;
   padding: 1rem;
   width: 100%;
+  -webkit-appearance: none;
+    -moz-appearance: none;
   -webkit-transition: color 0.15s ease-in-out;
     -moz-transition: color 0.15s ease-in-out;
       -o-transition: color 0.15s ease-in-out;
