Update team members

--- a/_harp/team.jade
+++ b/_harp/team.jade
@@ -93,7 +93,7 @@ section#team(role="content")
 						a.link(href="mailto:eramirem@gmail.com") eramirem@gmail.com
 			.sixcol.last.center
 				article
-					img.thumbs(src="images/jhoana.jpg")
+					img.thumbs(src="images/jhoana_guzman.jpg")
 					h6 Jhoanna Guzmán / Popayán Director
 					p
 						| Administradora de empresas de la Universidad Autónoma del Cauca, la mayor parte de mi experiencia ha sido en la formulación y ejecución de proyectos de CTI en el departamento del Cauca.
@@ -108,7 +108,7 @@ section#team(role="content")
 					p
 						| Ingeniera en Automática Industrial de la Universidad del Cauca, con experiencia en el área educación y diseño curricular en formación en tecnología y emprendimiento para niños y jóvenes. Experiencia en formación de docentes y directivos docentes para la creación de planes de gestión para el uso educativo de nuevas tecnologías aplicadas a la educación y gestión escolar. Co-fundador de Racore Ingenieria Divertida.
 					p
-						a.link(href="mailto:") 
+						a.link(href="mailto:orianarob@gmail.com") orianarob@gmail.com
 			.sixcol.last.center
 				article
 					img.thumbs(src="images/jhoana.jpg")
@@ -116,4 +116,4 @@ section#team(role="content")
 					p
 						| Ingeniero de sistemas de la Universidad Autónoma del Cauca. con experiencia en el desarrollo de software. Co-fundador de Racore Ingenieria Divertida.
 					p
-						a.link(href="mailto:") 
+						a.link(href="mailto:jlgcorra@gmail.com") jlgcorra@gmail.com
