--- a/_harp/_layout.jade
+++ b/_harp/_layout.jade
@@ -1,8 +1,9 @@
 doctype html
 html
 	head
-		title Coderise
+		title= title
 		meta(charset="UTF-8")
+		meta(name="description" content="#{ description })")
 		meta(name="viewport", content="width=device-width, initial-scale=1.0")
 		meta(http-equiv="Content-Type", content="text/html; charset=utf-8")
 		script(src="http://code.jquery.com/jquery-latest.js", type="text/javascript")
@@ -11,7 +12,7 @@ html
 		script(src="/js/googleAnalytics.js", type="text/javascript")
 		link(href="/css/default2.css", type="text/css", rel="stylesheet", media="all")
 		link(href="/css/1140.css", type="text/css", rel="stylesheet", media="all")
-		link(rel="icon", type="image/png", href="favicon.png")
+		link(rel="icon", type="image/png", href="/favicon.png")
 	body
 		#container
 			header.container(role="banner")
